@@ -65,5 +65,6 @@
         appointments split by status\n
         fixed insurances\n
         version 34 patient\n
+        version 35 patient\n
     </string>
 </resources>
